Added some textual desc

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -293,6 +293,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We observe that there is higher 5-score review than the others.  \n",
+    "Intepretations : \n",
+    "- The people are more likely to thanks the product quality by posting a review than to say his displeasure\n",
+    "- Amazon sell more good quality product (here video game) than bad one\n",
+    "- The 5 stars review can be due to the presence of fakes/paid review."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -491,6 +502,13 @@
    ],
    "source": [
     "video_games[video_games.helpfulRate > 0].helpfulRate.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best evaluator seems to be a normal person, his helpfulRate is close to the mean."
    ]
   },
   {
@@ -838,7 +856,7 @@
    "source": [
     "There is some correlation between between review length and the helpful rate.\n",
     "We can think that more the review length is high, more the review can contain more descriptions and arguments, so it can increase the helpfullness.   \n",
-    "Then, the summary length and the review length seems to be also correlated. The more the review text is lengthy, the more the summary needs letters to "
+    "Then, the summary length and the review length seems to be also correlated. The more the review text is lengthy, the more the summary needs letters to summarize it."
    ]
   },
   {
