--- a/Project.ipynb
+++ b/Project.ipynb
@@ -267,7 +267,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb1a2684d68>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAecAAAHVCAYAAADLvzPyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE4pJREFUeJzt3X+s3Xd93/HXu7ElWIHlD1+aLI7nScsfGy0r2V2IoJsy\npDISomaVoiqVaKrsDysofwStXUU7iY6/xv6pUEgVz6IVRO26tiqgCJKtbCUCpiXM+YGTECZZU2gS\nRYqB1sENqhT63h8+VBfnOvde+zj37XsfD+nofs/3+/H3vP2H/cz3nG+Oq7sDAMzxY9s9AADwo8QZ\nAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGH2bNcL79u3rw8ePLhdLw8Ar7tHHnnk2929\nstG6bYvzwYMHc/To0e16eQB43VXVtzazztvaADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gz\nAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMJuKc1U9U1VPVNXjVfWqf+exTrurqo5X1bGqunr5\nowLA7rCVf8/5X3b3t89y7PokVy0e70xyz+InALBFy3pb+6Yk9/ZpDyW5tKouX9K5AWBX2WycO8n/\nqKpHqurQOsevSPLsmufPLfYBAFu02be1f6a7n6+qtyb5YlV9s7u/vNUXW4T9UJIcOHBgq78cLno/\n9emf2u4RRnnil5/Y7hFgpE3FubufX/x8sao+m+SaJGvj/HySK9c837/Yd+Z5jiQ5kiSrq6t9jjPD\nRet7T38sz3zs/ds9xggHP/yF7R4Bxtrwbe2q+vGqevMPt5O8N8mTZyy7L8mti7u2r01ysrtfWPq0\nALALbObK+SeSfLaqfrj+v3T3f6uq25Okuw8nuT/JDUmOJ3k5yW0XZlwA2Pk2jHN3/78k/2Sd/YfX\nbHeSO5Y7GgDsTr4hDACGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFg\nGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHE\nGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcA\nGEacAWAYcQaAYcQZAIbZdJyr6pKqeqyqPr/Oseuq6mRVPb54fGS5YwLA7rFnC2vvTPJ0krec5fhX\nuvvG8x8JAHa3TV05V9X+JO9P8skLOw4AsNm3tT+e5NeS/M1rrHlXVR2rqgeq6m3rLaiqQ1V1tKqO\nnjhxYquzAsCusGGcq+rGJC929yOvsezRJAe6++1JPpHkc+st6u4j3b3a3asrKyvnNDAA7HSbuXJ+\nd5Kfq6pnkvzXJO+pqt9bu6C7X+ruU4vt+5Psrap9yx4WAHaDDePc3b/e3fu7+2CSW5L8WXd/YO2a\nqrqsqmqxfc3ivN+5APMCwI63lbu1f0RV3Z4k3X04yc1JPlhVryT5fpJburuXMyIA7C5binN3P5jk\nwcX24TX7705y9zIHA4DdyjeEAcAw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIM\nAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAM\nI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4\nA8Aw4gwAw4gzAAwjzgAwzKbjXFWXVNVjVfX5dY5VVd1VVcer6lhVXb3cMQFg99jKlfOdSZ4+y7Hr\nk1y1eBxKcs95zgUAu9am4lxV+5O8P8knz7LkpiT39mkPJbm0qi5f0owAsKts9sr540l+LcnfnOX4\nFUmeXfP8ucU+AGCL9my0oKpuTPJidz9SVdedz4tV1aGcfts7Bw4cOJ9TwUXr4Ie/sN0jjPB337h3\nu0eAsTaMc5J3J/m5qrohyRuSvKWqfq+7P7BmzfNJrlzzfP9i34/o7iNJjiTJ6upqn/PUcJF65mPv\n3+4RcvDDXxgxB3B2G76t3d2/3t37u/tgkluS/NkZYU6S+5Lcurhr+9okJ7v7heWPCwA732aunNdV\nVbcnSXcfTnJ/khuSHE/ycpLbljIdAOxCW4pzdz+Y5MHF9uE1+zvJHcscDAB2K98QBgDDiDMADCPO\nADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPA\nMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOI\nMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMNsGOeqekNV\nfa2qvl5VT1XVR9dZc11VnayqxxePj1yYcQFg59uziTV/neQ93X2qqvYm+WpVPdDdD52x7ivdfePy\nRwSA3WXDOHd3Jzm1eLp38egLORQA7Gab+sy5qi6pqseTvJjki9398DrL3lVVx6rqgap621nOc6iq\njlbV0RMnTpzH2ACwc20qzt39g+7+6ST7k1xTVT95xpJHkxzo7rcn+USSz53lPEe6e7W7V1dWVs5n\nbgDYsbZ0t3Z3/2WSLyV53xn7X+ruU4vt+5Psrap9S5sSAHaRzdytvVJVly6235jkZ5N884w1l1VV\nLbavWZz3O8sfFwB2vs3crX15kk9X1SU5Hd0/6u7PV9XtSdLdh5PcnOSDVfVKku8nuWVxIxkAsEWb\nuVv7WJJ3rLP/8Jrtu5PcvdzRAGB38g1hADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwj\nzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgD\nwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADD\niDMADCPOADCMOAPAMOIMAMOIMwAMs2Gcq+oNVfW1qvp6VT1VVR9dZ01V1V1VdbyqjlXV1RdmXADY\n+fZsYs1fJ3lPd5+qqr1JvlpVD3T3Q2vWXJ/kqsXjnUnuWfwEALZowyvnPu3U4unexaPPWHZTknsX\nax9KcmlVXb7cUQFgd9jMlXOq6pIkjyT5h0l+u7sfPmPJFUmeXfP8ucW+F844z6Ekh5LkwIED5zgy\n7G5Vdf7n+E/nP0f3mf+NDizLpm4I6+4fdPdPJ9mf5Jqq+slzebHuPtLdq929urKyci6ngF2vu0c8\ngAtnS3drd/dfJvlSkvedcej5JFeueb5/sQ8A2KLN3K29UlWXLrbfmORnk3zzjGX3Jbl1cdf2tUlO\ndvcLAQC2bDOfOV+e5NOLz51/LMkfdffnq+r2JOnuw0nuT3JDkuNJXk5y2wWaFwB2vA3j3N3Hkrxj\nnf2H12x3kjuWOxoA7E6+IQwAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAY\nRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhx\nBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkA\nhhFnABhGnAFgGHEGgGHEGQCG2TDOVXVlVX2pqr5RVU9V1Z3rrLmuqk5W1eOLx0cuzLgAsPPt2cSa\nV5L8Snc/WlVvTvJIVX2xu79xxrqvdPeNyx8RAHaXDa+cu/uF7n50sf29JE8nueJCDwYAu9WWPnOu\nqoNJ3pHk4XUOv6uqjlXVA1X1trP8+kNVdbSqjp44cWLLwwLAbrDpOFfVm5L8SZIPdfdLZxx+NMmB\n7n57kk8k+dx65+juI9292t2rKysr5zozAOxom4pzVe3N6TD/fnd/5szj3f1Sd59abN+fZG9V7Vvq\npACwS2zmbu1K8jtJnu7u3zrLmssW61JV1yzO+51lDgoAu8Vm7tZ+d5JfSvJEVT2+2PcbSQ4kSXcf\nTnJzkg9W1StJvp/klu7uCzAvAOx4G8a5u7+apDZYc3eSu5c1FADsZr4hDACGEWcAGEacAWAYcQaA\nYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYR\nZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwB\nYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYTaMc1VdWVVfqqpvVNVTVXXn\nOmuqqu6qquNVdayqrr4w4wLnqqpe9QBm2rOJNa8k+ZXufrSq3pzkkar6Ynd/Y82a65NctXi8M8k9\ni5/AAGcLcVWlu1/naYCNbHjl3N0vdPeji+3vJXk6yRVnLLspyb192kNJLq2qy5c+LXBeuvtvH8Bc\nW/rMuaoOJnlHkofPOHRFkmfXPH8urw54qupQVR2tqqMnTpzY2qQAsEtsOs5V9aYkf5LkQ9390rm8\nWHcf6e7V7l5dWVk5l1MAwI63mc+cU1V7czrMv9/dn1lnyfNJrlzzfP9iHzCIm8Dg4rCZu7Urye8k\nebq7f+ssy+5Lcuviru1rk5zs7heWOCdwHs72GbPPnmGmzVw5vzvJLyV5oqoeX+z7jSQHkqS7Dye5\nP8kNSY4neTnJbcsfFTgfQgwXjw3j3N1fTfKa74X16T/1dyxrKADYzXxDGAAMI84AMIw4A8Aw4gwA\nw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwj\nzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgD\nwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw2wY56r63ap6saqePMvx66rq\nZFU9vnh8ZPljAsDusWcTaz6V5O4k977Gmq90941LmQgAdrkNr5y7+8tJvvs6zAIAZHmfOb+rqo5V\n1QNV9bYlnRMAdqXNvK29kUeTHOjuU1V1Q5LPJblqvYVVdSjJoSQ5cODAEl4aAHae875y7u6XuvvU\nYvv+JHurat9Z1h7p7tXuXl1ZWTnflwaAHem841xVl1VVLbavWZzzO+d7XgDYrTZ8W7uq/iDJdUn2\nVdVzSX4zyd4k6e7DSW5O8sGqeiXJ95Pc0t19wSYGgB1uwzh39y9ucPzunP5frQCAJfANYQAwjDgD\nwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADD\niDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPO\nADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADDMhnGu\nqt+tqher6smzHK+ququqjlfVsaq6evljAuerql71AGbazJXzp5K87zWOX5/kqsXjUJJ7zn8sYJnO\nFmKBhpk2jHN3fznJd19jyU1J7u3THkpyaVVdvqwBgeXp7r99AHMt4zPnK5I8u+b5c4t9r1JVh6rq\naFUdPXHixBJeGgB2ntf1hrDuPtLdq929urKy8nq+NABcNPYs4RzPJ7lyzfP9i33AMD5jhovDMq6c\n70ty6+Ku7WuTnOzuF5ZwXmBJzvYZs8+eYaYNr5yr6g+SXJdkX1U9l+Q3k+xNku4+nOT+JDckOZ7k\n5SS3XahhgXMnxHDx2DDO3f2LGxzvJHcsbSIA2OV8QxgADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4\nA8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADBMbde/8VpVJ5J8a1teHHa3fUm+vd1DwC71\n97t7ZaNF2xZnYHtU1dHuXt3uOYCz87Y2AAwjzgAwjDjD7nNkuwcAXpvPnAFgGFfOADCMOAPAMOIM\nvKaqerCqVhfbz1TVvu2eCXY6cYZdrk7zdwEM4g8kXISq6t9W1ZOLx4eq6mNVdcea4/+hqn51sf3v\nqur/VNWxqvroYt/Bqvq/VXVvkieTXFlV91TV0ap66ofrgO2xZ7sHALamqv5pktuSvDNJJXk4yQeS\nfDzJby+W/UKSf1VV701yVZJrFmvvq6p/keTPF/t/ubsfWpz333f3d6vqkiT/s6re3t3HXsffGrAg\nznDx+Zkkn+3uv0qSqvpMkn+e5K1V9feSrCT5i+5+tqruTPLeJI8tfu2bcjrKf57kWz8M88IvVNWh\nnP574fIk/ziJOMM2EGfYOf44yc1JLkvyh4t9leQ/dvd/Xruwqg4m+as1z/9Bkl9N8s+6+y+q6lNJ\n3nDhRwbW4zNnuPh8Jcm/rqq/U1U/nuTnF/v+MMktOR3oP16s/e9J/k1VvSlJquqKqnrrOud8S07H\n+mRV/USS6y/w7wF4Da6c4SLT3Y8urmy/ttj1ye5+LEmq6s1Jnu/uFxZr/7Sq/lGS/11VSXIqpz+f\n/sEZ5/x6VT2W5JtJnk3yv16P3wuwPl/fCQDDeFsbAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFg\nmP8PzWpWtLV562kAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fb1a25e06d8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "video_games.boxplot(column=['overall'], figsize=(8, 8), grid=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +314,7 @@
        "Name: overall, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,6 +332,36 @@
     "When focusing at robust statistics only, we can see that the median is 5, and more than 75% of the reviews have awarded 4 or 5 grade to the product.\n",
     "\n",
     "We do the same description for the helpful rate (after removing the reviews without evaluation):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb1a25fc4a8>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAecAAAHVCAYAAADLvzPyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEZlJREFUeJzt3W/MpXdd5/HPlxlQCEiJHY32j9OQooyLZeGmGmOyGKO2\noBbjGlvIIg3YNFKzWYNhnriufx6UsMY/oTCO2qAxscZI3FmYtcQHiJFgOg0UGLA4lkKnkjDoWo2o\ndZbvPpijHm9n5j7TOe39dc7rldzJua7rd67r++TOO9d1nzlT3R0AYI6n7fYAAMC/Js4AMIw4A8Aw\n4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADLN3ty58+eWX9/79+3fr8gDwlLv//vs/3937dlq3a3He\nv39/jh07tluXB4CnXFV9epV1HmsDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw\n4gwAw4gzAAwjzgAwjDgDwDDiDADD7Bjnqrq7qj5XVR87x/Gqql+sqhNV9ZGqesn6xwSAzbHKnfM7\nk9xwnuM3Jrl28XNbkndc/FgAsLl2jHN3vz/JX55nyU1Jfr3P+GCSy6rqq9Y1IABsmnX8zfmKJI8s\nbZ9c7AMAnoC9T+XFquq2nHn0nauvvvqpvDSMcN1PvjeP/d0/XtQ5Pv2W71rTNBfna9787ot6/3Of\n+fQ88BPfsaZp4NKyjjg/muSqpe0rF/v+je4+nORwkmxtbfUarg3/rjz2d/+Yh+985cWd5M5L41dn\n/8H37PYIMNY6HmsfSfLaxae2vynJY9392TWcFwA20o53zlX1m0lenuTyqjqZ5CeSPD1JuvtQkqNJ\nXpHkRJIvJLn1yRoWADbBjnHu7lt2ON5J3ri2iQBgw/mGMAAYRpwBYBhxBoBhxBkAhhFnABhGnAFg\nGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHE\nGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcA\nGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAY\ncQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZ\nAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYVaKc1XdUFUP\nVtWJqjp4luPPrar/XVUPVNXxqrp1/aMCwGbYMc5VtSfJXUluTHIgyS1VdWDbsjcm+Xh3X5fk5Ul+\ntqqeseZZAWAjrHLnfH2SE939UHc/nuSeJDdtW9NJnlNVleTZSf4yyem1TgoAG2KVOF+R5JGl7ZOL\nfcveluSFSf48yUeT/Nfu/uL2E1XVbVV1rKqOnTp16gmODACXtnV9IOw7k3w4yVcneXGSt1XVl21f\n1N2Hu3uru7f27du3pksDwKVllTg/muSqpe0rF/uW3ZrkXX3GiSSfSvJ16xkRADbLKnG+L8m1VXXN\n4kNeNyc5sm3NZ5J8W5JU1Vcm+dokD61zUADYFHt3WtDdp6vqjiT3JtmT5O7uPl5Vty+OH0ry00ne\nWVUfTVJJ3tzdn38S5waAS9aOcU6S7j6a5Oi2fYeWXv95ku9Y72gAsJl8QxgADCPOADCMOAPAMOIM\nAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAM\nI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4\nA8Aw4gwAw4gzAAwjzgAwjDgDwDB7d3sA2CTPeeHBvOjXDu72GCM854VJ8srdHgNGEmd4Cv3NJ+7M\nw3cKUpLsP/ie3R4BxvJYGwCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhG\nnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEG\ngGHEGQCGEWcAGEacAWAYcQaAYcQZAIYRZwAYRpwBYBhxBoBhxBkAhlkpzlV1Q1U9WFUnqurgOda8\nvKo+XFXHq+oP1jsmAGyOvTstqKo9Se5K8u1JTia5r6qOdPfHl9ZcluTtSW7o7s9U1Vc8WQMDwKVu\nlTvn65Oc6O6HuvvxJPckuWnbmlcneVd3fyZJuvtz6x0TADbHKnG+IskjS9snF/uWvSDJ86rqfVV1\nf1W99mwnqqrbqupYVR07derUE5sYAC5x6/pA2N4kL03yyiTfmeTHq+oF2xd19+Hu3ururX379q3p\n0gBwadnxb85JHk1y1dL2lYt9y04m+Yvu/tskf1tV709yXZJPrmVKANggq9w535fk2qq6pqqekeTm\nJEe2rflfSb6lqvZW1bOSfGOST6x3VADYDDveOXf36aq6I8m9SfYkubu7j1fV7Yvjh7r7E1X1e0k+\nkuSLSX6luz/2ZA4OAJeqVR5rp7uPJjm6bd+hbdtvTfLW9Y0GAJvJN4QBwDDiDADDiDMADCPOADCM\nOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIM\nAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAM\nI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4\nA8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwA\nw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw6wU56q6\noaoerKoTVXXwPOteVlWnq+o/r29EANgsO8a5qvYkuSvJjUkOJLmlqg6cY91bkrx33UMCwCZZ5c75\n+iQnuvuh7n48yT1JbjrLuh9J8jtJPrfG+QBg46wS5yuSPLK0fXKx759V1RVJvjfJO853oqq6raqO\nVdWxU6dOXeisALAR1vWBsJ9P8ubu/uL5FnX34e7e6u6tffv2renSAHBp2bvCmkeTXLW0feVi37Kt\nJPdUVZJcnuQVVXW6u393LVMCwAZZJc73Jbm2qq7JmSjfnOTVywu6+5p/el1V70zybmEGgCdmxzh3\n9+mquiPJvUn2JLm7u49X1e2L44ee5BkBYKOscuec7j6a5Oi2fWeNcne/7uLHAoDN5RvCAGAYcQaA\nYcQZAIYRZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGEacAWAYcQaAYcQZAIYR\nZwAYRpwBYBhxBoBhxBkAhhFnABhm724PAJtm/8H37PYIIzz3mU/f7RFgLHGGp9DDd75yt0fI/oPv\nGTEHcG4eawPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCM\nOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIM\nAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAM\nI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADDMSnGuqhuq6sGqOlFVB89y/DVV\n9ZGq+mhVfaCqrlv/qACwGXaMc1XtSXJXkhuTHEhyS1Ud2LbsU0n+U3e/KMlPJzm87kEBYFOscud8\nfZIT3f1Qdz+e5J4kNy0v6O4PdPf/XWx+MMmV6x0TADbHKnG+IskjS9snF/vO5fVJ/s/ZDlTVbVV1\nrKqOnTp1avUpAWCDrPUDYVX1rTkT5zef7Xh3H+7ure7e2rdv3zovDQCXjL0rrHk0yVVL21cu9v0r\nVfUNSX4lyY3d/RfrGQ8ANs8qd873Jbm2qq6pqmckuTnJkeUFVXV1kncl+S/d/cn1jwkAm2PHO+fu\nPl1VdyS5N8meJHd39/Gqun1x/FCS/57ky5O8vaqS5HR3bz15YwPApWuVx9rp7qNJjm7bd2jp9RuS\nvGG9owHAZvINYQAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gz\nAAwjzgAwjDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAw\njDgDwDDiDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDi\nDADDiDMADCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMA\nDCPOADCMOAPAMOIMAMOIMwAMI84AMIw4A8Aw4gwAw4gzAAwjzgAwjDgDwDDiDADDiDMADCPOADCM\nOAPAMOIMAMOIMwAMI84AMIw4A8AwK8W5qm6oqger6kRVHTzL8aqqX1wc/0hVvWT9owLAZtgxzlW1\nJ8ldSW5MciDJLVV1YNuyG5Ncu/i5Lck71jwnAGyMVe6cr09yorsf6u7Hk9yT5KZta25K8ut9xgeT\nXFZVX7XmWQFgI+xdYc0VSR5Z2j6Z5BtXWHNFks8uL6qq23LmzjpXX331hc4KJKmqiz/HWy5+ju6+\n+JMAZ7VKnNemuw8nOZwkW1tbfrPhCRBFuPSt8lj70SRXLW1fudh3oWsAgBWsEuf7klxbVddU1TOS\n3JzkyLY1R5K8dvGp7W9K8lh3f3b7iQCAne34WLu7T1fVHUnuTbInyd3dfbyqbl8cP5TkaJJXJDmR\n5AtJbn3yRgaAS9tKf3Pu7qM5E+DlfYeWXneSN653NADYTL4hDACGEWcAGEacAWAYcQaAYcQZAIYR\nZwAYRpwBYBhxBoBhxBkAhhFnABhGnAFgGHEGgGHEGQCGEWcAGKbO/G+Pu3DhqlNJPr0rF4fNdnmS\nz+/2ELChvqa79+20aNfiDOyOqjrW3Vu7PQdwbh5rA8Aw4gwAw4gzbJ7Duz0AcH7+5gwAw7hzBoBh\nxBkAhhFnGKCq9lfVxy5g/f+oqjftsOZLqur3q+rDVfUD51n3uqp629J5H1285+NVdcsKs7yqqg6s\nOjuwM3GGS9d/TJLufnF3/9YFvO/nuvvFSW5K8ktV9fQd1r8qiTjDGokzzLGnqn65qo5X1Xur6plV\n9fyq+r2qur+q/rCqvm77m6rqfVX1C4u73Y9V1fVV9RVJfiPJyxb7n19VD1fV5Yv3bFXV+843THf/\naZIvJHne4j0/VFX3VdUDVfU7VfWsqvrmJN+T5K1L19lxZuD8xBnmuDbJXd399Un+Ksn35cw/e/qR\n7n5pkjclefs53vusxd3uDye5u7s/l+QNSf5wcef8Zxc6TFW9JMmfLs6VJO/q7pd193VJPpHk9d39\ngSRHkvzY0nVWnRk4h727PQDwzz7V3R9evL4/yf4k35zkt6vqn9Z8yTne+5tJ0t3vr6ovq6rLLmKO\n/1ZVtyZ5QZLvXtr/H6rqZ5JcluTZSe7d/saqevYFzAycgzjDHP+w9Pr/JfnKJH+1uCPeyfYvLDjb\nFxiczr88LfvS85zr57r7f1bV9yT51ap6fnf/fZJ3JnlVdz9QVa9L8vKzvPdpFzAzcA4ea8Ncf53k\nU1X1/UlSZ1x3jrU/sFjzLUke6+7HzrLm4SQvXbz+vp0u3t1HkhxL8oOLXc9J8tnFB8Res7T0bxbH\n0t0XMjNwDuIMs70myeur6oEkx3PmE9Rn8/dV9aEkh5K8/hxrfjLJL1TVsZy5M1/FTyX50ap6WpIf\nT/LHSf4oyZ8srbknyY9V1Yeq6vkXMDNwDr6+E/6dW3zq+k3dfWy3ZwHWw50zAAzjzhkAhnHnDADD\niDMADCPOADCMOAPAMOIMAMP8f8e/GL5xeoZIAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fb1a26089b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "video_games[video_games.helpfulRate >= 0].boxplot(column=['helpfulRate'], figsize=(8, 8), grid=False)"
    ]
   },
   {
