--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1370,48 +1370,92 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>used</td>\n",
+       "      <td>pc</td>\n",
+       "      <td>having</td>\n",
+       "      <td>fairly</td>\n",
        "      <td>start</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>launch</td>\n",
+       "      <td>games</td>\n",
+       "      <td>released</td>\n",
+       "      <td>pretty</td>\n",
        "      <td>ps3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>damn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>going</td>\n",
+       "      <td>ps4</td>\n",
+       "      <td>fun</td>\n",
+       "      <td>time</td>\n",
        "      <td>longer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>money</td>\n",
+       "      <td>day</td>\n",
+       "      <td>love</td>\n",
+       "      <td>buying</td>\n",
+       "      <td>damn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>make</td>\n",
+       "      <td>playing</td>\n",
+       "      <td>research</td>\n",
+       "      <td>console</td>\n",
        "      <td>fee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>console</td>\n",
+       "      <td>bought</td>\n",
+       "      <td>early</td>\n",
+       "      <td>available</td>\n",
        "      <td>ps4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>charge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>game</td>\n",
+       "      <td>ps</td>\n",
+       "      <td>problem</td>\n",
+       "      <td>ve</td>\n",
        "      <td>button</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>good</td>\n",
+       "      <td>xbox</td>\n",
+       "      <td>hope</td>\n",
+       "      <td>issues</td>\n",
+       "      <td>charge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>getting</td>\n",
+       "      <td>just</td>\n",
+       "      <td>wasn</td>\n",
+       "      <td>far</td>\n",
        "      <td>options</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>gaming</td>\n",
+       "      <td>console</td>\n",
+       "      <td>little</td>\n",
+       "      <td>gaming</td>\n",
        "      <td>playstation</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1419,36 +1463,55 @@
        "</div>"
       ],
       "text/plain": [
-       "             0\n",
-       "0        start\n",
-       "1          ps3\n",
-       "2         damn\n",
-       "3       longer\n",
-       "4          fee\n",
-       "5          ps4\n",
-       "6       charge\n",
-       "7       button\n",
-       "8      options\n",
-       "9  playstation"
+       "         1        2         3          4            5\n",
+       "0     used       pc    having     fairly        start\n",
+       "1   launch    games  released     pretty          ps3\n",
+       "2    going      ps4       fun       time       longer\n",
+       "3    money      day      love     buying         damn\n",
+       "4     make  playing  research    console          fee\n",
+       "5  console   bought     early  available          ps4\n",
+       "6     game       ps   problem         ve       button\n",
+       "7     good     xbox      hope     issues       charge\n",
+       "8  getting     just      wasn        far      options\n",
+       "9   gaming  console    little     gaming  playstation"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "vectorizer = TfidfVectorizer(stop_words = 'english', min_df=5) # Remove stop words and words appearing in less than 5 examples\n",
-    "tfidf_matrix = vectorizer.fit_transform(most_reviewed_reviews.reviewText)\n",
-    "feature_names = vectorizer.get_feature_names() \n",
     "\n",
-    "feature_array = np.array(feature_names)\n",
-    "tfidf_sorting = np.argsort(tfidf_matrix.toarray()).flatten()[::-1]\n",
+    "def get_top_words(text_series):\n",
+    "    vectorizer = TfidfVectorizer(stop_words = 'english', min_df=5) # Remove stop words and words appearing in less than 5 examples\n",
+    "    tfidf_matrix = vectorizer.fit_transform(text_series)\n",
+    "    feature_names = vectorizer.get_feature_names() \n",
     "\n",
-    "n = 10\n",
-    "top_n = feature_array[tfidf_sorting][:n]\n",
-    "pd.DataFrame(top_n)"
+    "    feature_array = np.array(feature_names)\n",
+    "    tfidf_sorting = np.argsort(tfidf_matrix.toarray()).flatten()[::-1]\n",
+    "\n",
+    "    n = 10\n",
+    "    top_n = feature_array[tfidf_sorting][:n]\n",
+    "    return top_n\n",
+    "\n",
+    "\n",
+    "top_words_per_overall = pd.DataFrame()\n",
+    "\n",
+    "for i in range(5):\n",
+    "    top_words_per_overall[i+1] = get_top_words(most_reviewed_reviews[most_reviewed_reviews.overall == (i+1)].reviewText)\n",
+    "top_words_per_overall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer(stop_words = 'english', min_df=5)\n",
+    "tfidf_matrix = vectorizer.fit_transform(most_reviewed_reviews.reviewText)"
    ]
   },
   {
