starting to cleanup and describe the notebook

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Amazon reviews"
+    "# Amazon reviews\n",
+    "\n",
+    "This notebook contains an exploratory analysis of one specific category of products of the Amazon reviews. Our objective is to be able to understand how reviews are distributed and find some useful insights to provide a deeper analysis to answer our research questions.\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "1. [Data importation](#Data-importation)\n",
+    "2. [Descriptive analysis](#Descriptive-analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +32,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data importation\n",
+    "\n",
+    "We first start by importing data. Because we focus on one specific category (*video games*), we won't need to use Spark here.\n",
+    "\n",
     "### Download the data\n",
-    "We will use the 5-core reviews\n",
-    "http://jmcauley.ucsd.edu/data/amazon/\n",
+    "\n",
+    "We will use the 5-core reviews which can be downloaded here: http://jmcauley.ucsd.edu/data/amazon/. The exact file used for video games import is http://snap.stanford.edu/data/amazon/productGraph/categoryFiles/reviews_Video_Games_5.json.gz.\n",
     "\n",
     "### File preparation\n",
     "\n",
-    "To prepare the file and be able to read it properly, the following sed commands must be used:\n",
+    "After downloading the file, we turn it to a valid, json array to ease importation. We use the following sed commands to do so:\n",
     "\n",
     "```sh\n",
     "sed -i '1s/^/[/' data/file.json # Starts JSON array\n",
@@ -44,14 +55,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data importation\n",
+    "### Pandas importation\n",
     "\n",
-    "We will start by focusing on one specific product subsection, here video games. (http://snap.stanford.edu/data/amazon/productGraph/categoryFiles/reviews_Video_Games_5.json.gz)"
+    "We import data and start by doing some simple cleaning. Dates are stored in two different formats (`reviewTime` and `unixReviewTime`). We will use the latest one to create a new `date` field with standard DateTime format, which will be easier to handle.\n",
+    "\n",
+    "We create a two-level index to allow grouping reviews per product and reviewer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +79,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,6 +93,9 @@
     "del video_games['unixReviewTime']\n",
     "\n",
     "video_games.set_index(['asin', 'reviewerID'], inplace=True)\n",
+    "\n",
+    "assert video_games.index.is_unique # There is no more than one review per person per product\n",
+    "\n",
     "video_games.dtypes"
    ]
   },
@@ -87,12 +103,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data cleaning"
+    "We can see data types are already guessed by Pandas. We need, however, to reformat the `helpful` field. It is currently stored as an array of two values, the first one describing how many users voted the review was helpful and the second one describing how many votes the review received."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data formatting\n",
+    "\n",
+    "To ease data handling, we will calculate the `helpfulRate` of each comment. It will help us extracting which reviewers are providing the best reviews on one or multiple products. When a review does not have any helpful votes, the rate will be set to `-1`.\n",
+    "\n",
+    "We also store the number of total reviews in a new row so we can take rid of the helpful array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -117,13 +144,13 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>helpful</th>\n",
        "      <th>overall</th>\n",
        "      <th>reviewText</th>\n",
        "      <th>reviewerName</th>\n",
        "      <th>summary</th>\n",
        "      <th>date</th>\n",
        "      <th>helpfulRate</th>\n",
+       "      <th>helpfulCount</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>asin</th>\n",
@@ -141,66 +168,66 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">0700099867</th>\n",
        "      <th>A2HD75EMZR8QLN</th>\n",
-       "      <td>[8, 12]</td>\n",
        "      <td>1</td>\n",
        "      <td>Installing the game was a struggle (because of...</td>\n",
        "      <td>123</td>\n",
        "      <td>Pay to unlock content? I don't think so.</td>\n",
        "      <td>2012-07-09</td>\n",
        "      <td>0.666667</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A3UR8NLLY1ZHCX</th>\n",
-       "      <td>[0, 0]</td>\n",
        "      <td>4</td>\n",
        "      <td>If you like rally cars get this game you will ...</td>\n",
        "      <td>Alejandro Henao \"Electronic Junky\"</td>\n",
        "      <td>Good rally game</td>\n",
        "      <td>2013-06-30</td>\n",
        "      <td>-1.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A1INA0F5CWW3J4</th>\n",
-       "      <td>[0, 0]</td>\n",
        "      <td>1</td>\n",
        "      <td>1st shipment received a book instead of the ga...</td>\n",
        "      <td>Amazon Shopper \"Mr.Repsol\"</td>\n",
        "      <td>Wrong key</td>\n",
        "      <td>2014-06-28</td>\n",
        "      <td>-1.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A1DLMTOTHQ4AST</th>\n",
-       "      <td>[7, 10]</td>\n",
        "      <td>3</td>\n",
        "      <td>I got this version instead of the PS3 version,...</td>\n",
        "      <td>ampgreen</td>\n",
        "      <td>awesome game, if it did not crash frequently !!</td>\n",
        "      <td>2011-09-14</td>\n",
        "      <td>0.700000</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A361M14PU2GUEG</th>\n",
-       "      <td>[2, 2]</td>\n",
        "      <td>4</td>\n",
        "      <td>I had Dirt 2 on Xbox 360 and it was an okay ga...</td>\n",
        "      <td>Angry Ryan \"Ryan A. Forrest\"</td>\n",
        "      <td>DIRT 3</td>\n",
        "      <td>2011-06-14</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           helpful  overall  \\\n",
-       "asin       reviewerID                         \n",
-       "0700099867 A2HD75EMZR8QLN  [8, 12]        1   \n",
-       "           A3UR8NLLY1ZHCX   [0, 0]        4   \n",
-       "           A1INA0F5CWW3J4   [0, 0]        1   \n",
-       "           A1DLMTOTHQ4AST  [7, 10]        3   \n",
-       "           A361M14PU2GUEG   [2, 2]        4   \n",
+       "                           overall  \\\n",
+       "asin       reviewerID                \n",
+       "0700099867 A2HD75EMZR8QLN        1   \n",
+       "           A3UR8NLLY1ZHCX        4   \n",
+       "           A1INA0F5CWW3J4        1   \n",
+       "           A1DLMTOTHQ4AST        3   \n",
+       "           A361M14PU2GUEG        4   \n",
        "\n",
        "                                                                  reviewText  \\\n",
        "asin       reviewerID                                                          \n",
@@ -226,22 +253,26 @@
        "           A1DLMTOTHQ4AST  awesome game, if it did not crash frequently !!   \n",
        "           A361M14PU2GUEG                                           DIRT 3   \n",
        "\n",
-       "                                date  helpfulRate  \n",
-       "asin       reviewerID                              \n",
-       "0700099867 A2HD75EMZR8QLN 2012-07-09     0.666667  \n",
-       "           A3UR8NLLY1ZHCX 2013-06-30    -1.000000  \n",
-       "           A1INA0F5CWW3J4 2014-06-28    -1.000000  \n",
-       "           A1DLMTOTHQ4AST 2011-09-14     0.700000  \n",
-       "           A361M14PU2GUEG 2011-06-14     1.000000  "
+       "                                date  helpfulRate  helpfulCount  \n",
+       "asin       reviewerID                                            \n",
+       "0700099867 A2HD75EMZR8QLN 2012-07-09     0.666667            12  \n",
+       "           A3UR8NLLY1ZHCX 2013-06-30    -1.000000             0  \n",
+       "           A1INA0F5CWW3J4 2014-06-28    -1.000000             0  \n",
+       "           A1DLMTOTHQ4AST 2011-09-14     0.700000            10  \n",
+       "           A361M14PU2GUEG 2011-06-14     1.000000             2  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def helpful_rate(row):\n",
+    "    '''\n",
+    "    Calculates the helpful rate of a review by determining what\n",
+    "    percentage of the votes described the review as \"helpful\".\n",
+    "    '''\n",
     "    was_helpful = row.helpful[0]\n",
     "    total_evaluations = row.helpful[1]\n",
     "    \n",
@@ -250,9 +281,17 @@
     "    \n",
     "    return was_helpful/total_evaluations\n",
     "\n",
-    "video_games['helpfulRate'] = video_games.apply(helpful_rate, axis=1)\n",
+    "def helpful_count(row):\n",
+    "    '''\n",
+    "    Gets the total number of helpful votes for a review\n",
+    "    '''\n",
+    "    return row.helpful[1]\n",
     "\n",
-    "assert video_games.index.is_unique # There is no more than one review per person per product\n",
+    "video_games['helpfulRate'] = video_games.apply(helpful_rate, axis=1)\n",
+    "video_games['helpfulCount'] = video_games.apply(helpful_count, axis=1)\n",
+    "del video_games['helpful']\n",
+    "\n",
+    "assert len(video_games[video_games['helpfulCount'] == 0]) == len(video_games[video_games['helpfulRate'] == -1])\n",
     "\n",
     "video_games.head()"
    ]
@@ -261,7 +300,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Descriptive analysis\n",
+    "Here is a first view of the data. All the reviews are grouped by product described by its product ID (`asin`). Then, for each product, all the reviews are indexed by the reviewer.\n",
+    "\n",
+    "Each column of the dataframe is self-descriptive and data types are allowing us to perform our analysis. We can now start digging into data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Descriptive analysis\n",
     "\n",
     "We first use pandas built-in functions to describe data:"
    ]
@@ -2352,7 +2400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
