continue detailing procedure

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -562,6 +562,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see two outsiders for reviews with less than 10% positive reviews and more than 90% positive reviews. This could be explained by the assumption made previously: the more a review is well rated, the more it is likely to get good rates. In the contrary, reviews with bad rates may be less visible on Amazon and may keep their low rates.\n",
+    "\n",
+    "We will now sort the reviewers based on their helpful rate mean, to see if there are some top reviewers or very bad ones."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -598,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zooming to get only evaluators with more than 30 evaluations. We can see that evaluations are done by a restricted number of evaluators providing the majority of evaluations."
+    "We try to zoom to get only evaluators with more than 30 evaluations. We can see that evaluations are done by a restricted number of evaluators providing the majority of evaluations."
    ]
   },
   {
@@ -683,6 +692,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We indeed have a power law.\n",
+    "\n",
     "Focusing on the best evaluator, let's see if he provides well rated evaluations:"
    ]
   },
