add link to jupyter.org

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Amazon reviews\n",
     "\n",
+    "> To get a better notebook formatting, [click here](https://nbviewer.jupyter.org/github/Coac/epfl-ada/blob/master/Project/Project.ipynb).\n",
+    "\n",
     "This notebook contains an exploratory analysis of one specific category of products of the Amazon reviews. Our objective is to be able to understand how reviews are distributed and find some useful insights to provide a deeper analysis to answer our research questions.\n",
     "\n",
     "## Summary\n",
