--- a/Project.ipynb
+++ b/Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,18 +308,169 @@
     "\n",
     "Each column of the dataframe is self-descriptive (notice that `overall` is the grade given from the reviewer in a scale between 1 and 5) and data types are allowing us to perform our analysis.\n",
     "\n",
-    "We now load *video games* metadata:"
+    "We now load *video games* metadata. We had some trouble importing the file, so we had to make some transformations in addition to the `sed` ones, because strings were surrounded by simple quotes instead of double quotes. Here is the Python script we used:\n",
+    "\n",
+    "```python\n",
+    "import ast\n",
+    "import json\n",
+    "\n",
+    "with open('./data/video-games.meta.json', 'r') as metadata:\n",
+    "    raw_data = metadata.read().replace('\\n', '')\n",
+    "    parsed_data = ast.literal_eval(raw_data)\n",
+    "\n",
+    "with open('./data/video-games.meta.parsed.json', 'w') as parsed:\n",
+    "    json.dump(parsed_data, parsed)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>description</th>\n",
+       "      <th>imUrl</th>\n",
+       "      <th>price</th>\n",
+       "      <th>related</th>\n",
+       "      <th>salesRank</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0078764343</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[[Video Games, Xbox 360, Games]]</td>\n",
+       "      <td>Brand new sealed!</td>\n",
+       "      <td>http://ecx.images-amazon.com/images/I/513h6dPb...</td>\n",
+       "      <td>37.98</td>\n",
+       "      <td>{'also_bought': ['B000TI836G', 'B003Q53VZC', '...</td>\n",
+       "      <td>{'Video Games': 28655}</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>043933702X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[[Video Games, PC, Games]]</td>\n",
+       "      <td>In Stock NOW.  Eligible for FREE Super Saving ...</td>\n",
+       "      <td>http://ecx.images-amazon.com/images/I/61KKRndV...</td>\n",
+       "      <td>23.50</td>\n",
+       "      <td>{'buy_after_viewing': ['B000067NP1', '04395739...</td>\n",
+       "      <td>{'Video Games': 44080}</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0439339987</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[[Video Games, PC, Games]]</td>\n",
+       "      <td>Grandma Groupers kelp seeds are missing and wi...</td>\n",
+       "      <td>http://ecx.images-amazon.com/images/I/416QZg89...</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>{'also_bought': ['B000314VVU', 'B000PXUOTE', '...</td>\n",
+       "      <td>{'Video Games': 49836}</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0439342260</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[[Video Games, PC, Games]]</td>\n",
+       "      <td>This software is BRAND NEW. Packaging may diff...</td>\n",
+       "      <td>http://ecx.images-amazon.com/images/I/61Wvu-Uj...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'also_viewed': ['043934302X']}</td>\n",
+       "      <td>{'Video Games': 49156}</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0439339960</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[[Video Games, PC, Games]]</td>\n",
+       "      <td>a scholastic clubs fairs cd rom game</td>\n",
+       "      <td>http://ecx.images-amazon.com/images/I/51k3oRCF...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'also_viewed': ['B00028D7TG']}</td>\n",
+       "      <td>{'Video Games': 52262}</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         asin brand                        categories  \\\n",
+       "0  0078764343   NaN  [[Video Games, Xbox 360, Games]]   \n",
+       "1  043933702X   NaN        [[Video Games, PC, Games]]   \n",
+       "2  0439339987   NaN        [[Video Games, PC, Games]]   \n",
+       "3  0439342260   NaN        [[Video Games, PC, Games]]   \n",
+       "4  0439339960   NaN        [[Video Games, PC, Games]]   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0                                  Brand new sealed!   \n",
+       "1  In Stock NOW.  Eligible for FREE Super Saving ...   \n",
+       "2  Grandma Groupers kelp seeds are missing and wi...   \n",
+       "3  This software is BRAND NEW. Packaging may diff...   \n",
+       "4               a scholastic clubs fairs cd rom game   \n",
+       "\n",
+       "                                               imUrl  price  \\\n",
+       "0  http://ecx.images-amazon.com/images/I/513h6dPb...  37.98   \n",
+       "1  http://ecx.images-amazon.com/images/I/61KKRndV...  23.50   \n",
+       "2  http://ecx.images-amazon.com/images/I/416QZg89...   8.95   \n",
+       "3  http://ecx.images-amazon.com/images/I/61Wvu-Uj...    NaN   \n",
+       "4  http://ecx.images-amazon.com/images/I/51k3oRCF...    NaN   \n",
+       "\n",
+       "                                             related               salesRank  \\\n",
+       "0  {'also_bought': ['B000TI836G', 'B003Q53VZC', '...  {'Video Games': 28655}   \n",
+       "1  {'buy_after_viewing': ['B000067NP1', '04395739...  {'Video Games': 44080}   \n",
+       "2  {'also_bought': ['B000314VVU', 'B000PXUOTE', '...  {'Video Games': 49836}   \n",
+       "3                    {'also_viewed': ['043934302X']}  {'Video Games': 49156}   \n",
+       "4                    {'also_viewed': ['B00028D7TG']}  {'Video Games': 52262}   \n",
+       "\n",
+       "  title  \n",
+       "0   NaN  \n",
+       "1   NaN  \n",
+       "2   NaN  \n",
+       "3   NaN  \n",
+       "4   NaN  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#video_games_meta = pd.read_json('./data/video-games.meta.json')\n",
+    "video_games_meta = pd.read_json('./data/video-games.meta.parsed.json')\n",
     "\n",
-    "#video_games_meta.head()"
+    "video_games_meta.head()"
    ]
   },
   {
